--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: Gilroy;
-    src: url(/project7/Gilroy-Thin.ttf);
+    src: url(Gilroy-Thin.ttf);
 }
 @font-face {
     font-family: Monument;
-    src: url(/project7/MonumentExtended-Regular.otf);
+    src: url(MonumentExtended-Regular.otf);
 }
 *{
     margin: 0;
